[package]
name = "quicfs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11"
tokio = { version = "1.32", features = ["full"] }
rustls = { version = "0.21", features = ["quic"] }
anyhow = "1.0"
quicfs-common = { path = "../common" }
fuser = "0.13"
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
h3 = "0.0.6"
h3-quinn = "0.0.7"
http = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
