[package]
name = "quicfs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "*"
tokio = { version = "*", features = ["full"] }
rustls = { version = "*", features = ["ring"] }
anyhow = "*"
quicfs-common = { path = "../common" }
fuser = "*"
libc = "*"
clap = { version = "*", features = ["derive"] }
tracing = "*"
tracing-subscriber = "*"
h3 = "*"
h3-quinn = "*"
http = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
bytes = "*"
urlencoding = "*"
futures = "*"
