[package]
name = "quicfs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "*"
tokio = { version = "1.32", features = ["full"] }
rustls = { version = "*", features = ["quic"] }
rcgen = "0.11"
directories = "5.0"
anyhow = "1.0"
quicfs-common = { path = "../common" }
axum = { version = "0.7", features = ["http2", "json"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["cors"] }
h3 = "0.0.6"
h3-quinn = "0.0.7"
bytes = "1.5"
http = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
