[package]
name = "quicfs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "*"
tokio = { version = "*", features = ["full"] }
rustls = "*"
rcgen = "*"
directories = "*"
anyhow = "*"
quicfs-common = { path = "../common" }
h3 = "*"
h3-quinn = "*"
bytes = "*"
http = "*"
http-body = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tracing = "*"
tracing-subscriber = "*"
urlencoding = "*"
clap = { version = "*", features = ["derive"] }
async-stream = "*"
memmap2 = "*"
